syntax = "proto3";
import "app_create.proto";

message UpdateAppRequest {
    string app_id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_desc { string desc = 3; };
    oneof one_of_color_style { ColorStyle color_style = 4; };
    oneof one_of_is_trash { bool is_trash = 5; };
}
message UpdateAppParams {
    string app_id = 1;
    oneof one_of_name { string name = 2; };
    oneof one_of_desc { string desc = 3; };
    oneof one_of_color_style { ColorStyle color_style = 4; };
    oneof one_of_is_trash { bool is_trash = 5; };
}
